## Process this file with automake to produce Makefile.in

man_MANS = lexholder-ru.1 rulex.1 rulexdb_classify.3 rulexdb_close.3 \
	rulexdb_dataset_name.3 rulexdb_discard_dictionary.3 \
	rulexdb_discard_ruleset.3 rulexdb_fetch_rule.3 rulexdb_lexbase.3 \
	rulexdb_load_ruleset.3 rulexdb_open.3 rulexdb_remove_item.3 \
	rulexdb_remove_rule.3 rulexdb_remove_this_item.3 \
	rulexdb_retrieve_item.3 rulexdb_search.3 rulexdb_seq.3 \
	rulexdb_subscribe_item.3 rulexdb_subscribe_rule.3
EXTRA_DIST = lexholder-ru.1 rulex.1 rulexdb_classify.3 rulexdb_close.3 \
	rulexdb_dataset_name.3 rulexdb_discard_dictionary.3 \
	rulexdb_discard_ruleset.3 rulexdb_fetch_rule.3 rulexdb_lexbase.3 \
	rulexdb_load_ruleset.3 rulexdb_open.3 rulexdb_remove_item.3 \
	rulexdb_remove_rule.3 rulexdb_remove_this_item.3 \
	rulexdb_retrieve_item.3 rulexdb_search.3 rulexdb_seq.3 \
	rulexdb_subscribe_item.3 rulexdb_subscribe_rule.3
MAINTAINERCLEANFILES = @srcdir@/Makefile.in
